--- a/warga/templates/warga/warga_list.html
+++ b/warga/templates/warga/warga_list.html
@@ -51,11 +51,15 @@
   </head>
   <body>
     <h1>Daftar Warga</h1>
+    <a href="{% url 'warga-tambah' %}">+ Tambah Warga Baru</a>
     <ul>
       {% for warga in object_list %}
       <li>
         <span class="nama">
-          <a href="{% url 'warga-detail' warga.pk %}"> {{ warga.nama }} </a>
+         <a href="{% url 'warga-detail' warga.pk %}">{{ warga.nama }}</a> |
+<a href="{% url 'warga-edit' warga.pk %}">Edit</a> |
+<a href="{% url 'warga-hapus' warga.pk %}">Hapus</a>
+
         </span>
         <span class="nik">NIK: {{ warga.nik }}</span>
       </li>
